# bridgepy

./: .env  LICENCE.txt  Pipfile  README.txt  bridge.py  setup.cfg
src/: test.py
src/bridge/: bridge.py
src/bridge.egg-info/: PKG-INFO  SOURCES.txt
