[metadata]
name = bridge
version = 1.0.0
author = Daniel Webala
author_email = webd01@protonmail.com
description = A python package that interacts with safaricom daraja api
long_description = file: README.md, LICENSE.txt
long_description_content_type = text/markdown
url = https://github.com/webala/bridgepy
project_urls =
    Bug Tracker = https://github.com/webala/bridgepy/issues
    repository = https://github.com/webala/bridgepy
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Development Status :: 4 - Beta

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8

[options.packages.find]
where = src